<resources>
    <string name="app_name">Homelander</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login">Login</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="register">Register</string>
    <string name="send_otp">Send OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="otp">OTP</string>
    <string name="verify">Verify</string>
...
